crates/solidity/testing/snapshots/bindings_output/errors/custom_types/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
    ╭─[input.sol:7:18]
    │
  7 │ ╭─▶     error Failure(
    ┆ ┆   
 10 │ ├─▶     );
    │ │            
    │ ╰──────────── Error occurred here.
────╯
Error: Expected Equal or Semicolon.
    ╭─[input.sol:13:23]
    │
 13 │         revert Failure(Severity.ERROR, "Testing");
    │                       ─────────────┬─────────────  
    │                                    ╰─────────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 1
  2 │     enum Severity {
    │          ────┬───  
    │              ╰───── def: 2
  3 │         INFO,
    │         ──┬─  
    │           ╰─── def: 3
  4 │         ERROR
    │         ──┬──  
    │           ╰──── def: 4
    │ 
  7 │     error Failure(
    │     ──┬── ───┬───  
    │       ╰──────────── unresolved
    │              │     
    │              ╰───── def: 5
    │ 
 12 │     function test() public {
    │              ──┬─  
    │                ╰─── def: 6
 13 │         revert Failure(Severity.ERROR, "Testing");
    │         ───┬── ───┬───  
    │            ╰──────────── unresolved
    │                   │     
    │                   ╰───── def: 7
────╯
